@@ -24,12 +24,6 @@ override_dh_link:
 	dh_link -pqtxmlpatterns5-dev-tools usr/lib/qt5/bin/xmlpatterns usr/lib/$(DEB_HOST_MULTIARCH)/qt5/bin/xmlpatterns \
 		usr/lib/qt5/bin/xmlpatternsvalidator usr/lib/$(DEB_HOST_MULTIARCH)/qt5/bin/xmlpatternsvalidator
 
-override_dh_missing:
-	dh_missing --fail-missing
-
-override_dh_makeshlibs:
-	dh_makeshlibs -V
-
 override_dh_auto_test-arch:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 	$(MAKE) install -Csrc/imports INSTALL_ROOT=$(CURDIR)/test_root
